2005-05-17  Petr Ovtchenkov  <ptr@island...>

	* test/unit/locale_test.cpp: some fixes in moneypunct test, related
	to international currency format; some problems still remains, due to
	unclear specifications---if international currency 3-chars abbreviation
	used in suffix form, additional space will be appended
	['1 234.56 RUR ']. This is due to intl_fmp.curr_symbol() == "RUR ",
	and the last is conform to OpenGroup spec.

2005-05-16  Petr Ovtchenkov  <ptr@island...>

	* src/c_locale_stub.cpp: "stub" implemntation moved into
	c_locale_dummy/c_locale_dummy.c, this file removed

	* src/c_locale.c: include c_locale_dummy/c_locale_dummy.c, in case of
	no real locale implementation.

	* src/c_locale_dummy/c_locale_dummy.c: This is a "stub" implementation
	of the "c_locale.h" interface, intended for operating systems where
	we have not yet written a real implementation. A C++ library using
	this stub implementation is still standard-conforming, since
	the C++ standard does not require that any locales other
	than "C" be supported.

	* build/lib/Makefile.inc: src/c_locale_stub.cpp removed.

	* src/facets_by_name.cpp: add comments in the _Init_monetary_formats.

	* src/c_locale_glibc/c_locale_glibc2.c: annotate some monetary-related
	functions.

2005-05-14  Petr Ovtchenkov  <ptr@island...>

	* build/Makefiles/gmake/aCC.mak: HP's aCC compiler and HP-UX os support.
	This isn't really checked and should be fixed on real system.

	* build/Makefiles/gmake/app/aCC.mak, gmake/lib/aCC.mak: ditto.

	* build/Makefiles/gmake/hp-ux/extern.mak, lib.mak: ditto.

	* build/Makefiles/gmake/hp-ux/rules-install-so.mak, rules-so.mak: ditto.
	
	* build/Makefiles/gmake/hp-ux/gmake/hp-ux/sys.mak: ditto.

	* build/lib/aCC.mak: ditto.

	* build/test/unit/aCC.mak: ditto.

	* build/test/unit/gcc.mak: remove dbg-shared tag from default build;
	if you need unit tests with debug info and without _STLP_DEBUG, make this
	tag explicitly.

2005-05-14  Francois Dumont  <dums@stlport...>
